--- a/Pickup/Pickup/Storyboards/Onboarding.storyboard
+++ b/Pickup/Pickup/Storyboards/Onboarding.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wwm-ph-xbO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wwm-ph-xbO">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -269,13 +269,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="exit" width="59" height="59"/>
-        <image name="finalOnboarding" width="588" height="588"/>
-        <image name="finalOnboardingBackground" width="867" height="1300"/>
-        <image name="firstOnboarding" width="544" height="544"/>
-        <image name="firstOnboardingBackground" width="3024" height="4032"/>
-        <image name="greenOnboarding" width="424" height="424"/>
-        <image name="purpleOnboarding" width="424" height="424"/>
-        <image name="yellowOnboarding" width="424" height="424"/>
+        <image name="exit" width="19.666666030883789" height="19.666666030883789"/>
+        <image name="finalOnboarding" width="196" height="196"/>
+        <image name="finalOnboardingBackground" width="289" height="433.33334350585938"/>
+        <image name="firstOnboarding" width="181.33332824707031" height="181.33332824707031"/>
+        <image name="firstOnboardingBackground" width="1008" height="1344"/>
+        <image name="greenOnboarding" width="141.33332824707031" height="141.33332824707031"/>
+        <image name="purpleOnboarding" width="141.33332824707031" height="141.33332824707031"/>
+        <image name="yellowOnboarding" width="141.33332824707031" height="141.33332824707031"/>
     </resources>
 </document>
